update README (#229)